<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>at_sonde_ros_driver</name>
  <version>1.0.0</version>
  <description>A ROS 2 driver to stream the monitored parameters of an In-Situ Aqua TROLL Multiparameter Sonde.</description>
  <maintainer email="song.ma.18@ucl.ac.uk">MA Song</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>libmodbus-dev</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
